// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  disabled: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group mg-input__input-group--disabled">
              <input aria-describedby="" disabled="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group mg-input__input-group--disabled">
              <input aria-describedby="" disabled="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group mg-input__input-group--disabled">
              <input aria-describedby="" disabled="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group mg-input__input-group--disabled">
              <input aria-describedby="" disabled="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  helpText: 'Hello joker'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          Hello joker
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  inputVerticalList: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--vertical">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelHide: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title class="sr-only" identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelOnTop: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--label-on-top mg-input--radio">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier" is-legend="">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio mg-input--readonly">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--label-on-top mg-input--radio mg-input--readonly">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier" is-legend="">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  required: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" required="" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" required="" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" required="" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" required="" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--label-on-top mg-input--radio">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier" is-legend="">
          label
        </mg-input-title>
        <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
          <mg-icon icon="info-circle"></mg-icon>
        </mg-tooltip>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 3`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 4`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 0 }) with selectedIndex (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 1 }) with selectedIndex (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 1 }) with selectedIndex (%s) 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 2 }) with selectedIndex (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 3 }) with selectedIndex (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio display error with displayError component's public method 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" required="" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" required="" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" required="" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" required="" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio display error with displayError component's public method 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="is-not-valid mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text identifier-error" id="identifier_0" name="identifier" required="" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text identifier-error" id="identifier_1" name="identifier" required="" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text identifier-error" id="identifier_2" name="identifier" required="" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text identifier-error" id="identifier_3" name="identifier" required="" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-radio patternerrormessage="Non">
  <mock:shadow-root>
    <fieldset class="is-not-valid mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-error" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-error" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-error" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-error" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-radio patternerrormessage="Non">
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group mg-input__input-group--disabled">
              <input aria-describedby="identifier-error" disabled="" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group mg-input__input-group--disabled">
              <input aria-describedby="identifier-error" disabled="" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group mg-input__input-group--disabled">
              <input aria-describedby="identifier-error" disabled="" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group mg-input__input-group--disabled">
              <input aria-describedby="identifier-error" disabled="" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-radio patternerrormessage="Non">
  <mock:shadow-root>
    <fieldset class="is-not-valid mg-input mg-input--radio">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <ul class="mg-input__input-group-container">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-error" id="identifier_0" name="identifier" type="radio" value="0">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-error" id="identifier_1" name="identifier" type="radio" value="1">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-error" id="identifier_2" name="identifier" type="radio" value="2">
              <label htmlfor="identifier_2">
                joker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-error" id="identifier_3" name="identifier" type="radio" value="3">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-radio patternerrormessage="Non">
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio mg-input--readonly">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;
